results/SpecGenBench/0-shot/log-SmallestEvenMulBranch-2023_11_29_01_10_44.txt
class SmallestEvenMulBranch {
    //@ requires n >= 0;
    //@ ensures \result % 2 == 0;
    public int smallestEvenMultiple(int n) {
        if(n % 2 == 0) {
            //@ assert n % 2 == 0;
            return n;
        }
        //@ assert n % 2 != 0;
        //@ assert \result % 2 == 0;
        return 2 * n;
    }
}
/home/max/Documents/JMLGPT/tmp/SmallestEvenMulBranch.java:10: error: A \result expression may not be in a assert clause
        //@ assert \result % 2 == 0;
                    ^
1 error

